--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
     build:
       context: .
       dockerfile: dev.Dockerfile
-    env_file: .env.dev
+    env_file: .env
     volumes:
       - .:/app
+    depends_on: 
+      - database
   database:
     image: postgres:alpine
     environment: 
